<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".view.details.DetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:animateLayoutChanges="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleTextAppearance="@style/CollapsingToolbarLayoutExpandedTextStyle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleTextColor="@color/white"
            tools:title="Title">

            <ImageView
                android:contentDescription="@string/venue_map_content_description"
                android:id="@+id/staticMapImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="center"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.3" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/venue_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:paddingHorizontal="20dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/venue_name"
                android:layout_width="0dp"
                android:ellipsize="end"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@id/venue_rating"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawablePadding="2dp"
                android:textColor="@color/black_trans_80"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Venue name" />

            <TextView
                android:id="@+id/categories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:ellipsize="end"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@id/venue_rating"
                app:layout_constraintStart_toStartOf="@id/venue_name"
                app:layout_constraintTop_toBottomOf="@id/venue_name"
                tools:text="Coffee, restaurant" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:textColor="#367A39"
                app:layout_constraintStart_toStartOf="@id/venue_name"
                app:layout_constraintTop_toBottomOf="@id/categories"
                tools:text="Opened" />

            <TextView
                android:id="@+id/venue_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:drawablePadding="2dp"
                android:gravity="center"
                tools:text="8.1"
                android:textSize="15sp"
                app:drawableStartCompat="@drawable/ic_star_rate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/venue_rating"
                tools:text="200 Likes" />

            <TextView
                android:id="@+id/addressTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/address_title"
                android:textColor="@color/black_trans_80"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/venue_name"
                app:layout_constraintTop_toBottomOf="@id/status" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:lines="3"
                app:layout_constraintStart_toStartOf="@id/addressTitle"
                app:layout_constraintTop_toBottomOf="@id/addressTitle"
                tools:text="1001 1st Ave (at Madison St)\nWA+, Seattle\nUnited States" />

            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                app:drawableStartCompat="@drawable/ic_location"
                app:layout_constraintBottom_toBottomOf="@id/address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/address"
                tools:text="1.3 km" />

            <TextView
                android:id="@+id/direction"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:clickable="true"
                android:focusable="true"
                android:drawablePadding="8dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:text="@string/go_to_maps"
                app:drawableStartCompat="@drawable/ic_baseline_directions_24"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address" />

            <TextView
                android:id="@+id/title_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/contacts"
                android:textColor="@color/black_trans_80"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/direction"
                app:layout_constraintTop_toBottomOf="@id/direction" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/contact_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="@id/title_contact"
                app:layout_constraintTop_toBottomOf="@id/title_contact">

                <ImageView
                    android:id="@+id/call_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle_icon_bg"
                    android:scaleType="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_call_24" />

                <TextView
                    android:id="@+id/call_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@id/call_icon"
                    app:layout_constraintStart_toStartOf="@id/call_icon"
                    app:layout_constraintTop_toBottomOf="@id/call_icon" />

                <ImageView
                    android:id="@+id/twitter_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/circle_icon_bg"
                    android:scaleType="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.35"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_twitter" />

                <TextView
                    android:id="@+id/twitter_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/twitter"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@id/twitter_icon"
                    app:layout_constraintStart_toStartOf="@id/twitter_icon"
                    app:layout_constraintTop_toBottomOf="@id/twitter_icon" />

                <ImageView
                    android:id="@+id/website_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/circle_icon_bg"
                    android:scaleType="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.62"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_web" />

                <TextView
                    android:id="@+id/website_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@id/website_icon"
                    app:layout_constraintStart_toStartOf="@id/website_icon"
                    app:layout_constraintTop_toBottomOf="@id/website_icon" />

                <ImageView
                    android:id="@+id/foursquare_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/circle_icon_bg"
                    android:scaleType="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.9"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_foursquare" />

                <TextView
                    android:id="@+id/foursquare_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/foursquare"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@id/foursquare_icon"
                    app:layout_constraintStart_toStartOf="@id/foursquare_icon"
                    app:layout_constraintTop_toBottomOf="@id/foursquare_icon" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/photos_title"
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/photos"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contact_layout" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/photos_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/photos_title"
                tools:itemCount="1"
                tools:listitem="@layout/photos_item" />

            <TextView
                android:id="@+id/no_photos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/no_photos"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/photos_title" />

            <TextView
                android:id="@+id/hours_title"
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/hours"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/photos_rv" />

            <TextView
                android:id="@+id/hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="@id/hours_title"
                app:layout_constraintTop_toBottomOf="@id/hours_title"
                tools:text="6:00 AM–6:00 PM" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/content_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="4dp"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>